# http_service

./: README.md
common/: CMakeLists.txt  appserver.h  commonrequesthandler.h  file_utils.h  msg.h  priority_queue.h  scope_guard.h  singleton.h  sync.h  threadpool.cpp  threadpool.h  workerthread.cpp  workerthread.h
httpclient/: CMakeLists.txt  client.cpp  client.h  clienthandler.h  downloadclienthandler.cpp  downloadclienthandler.h  main.cpp
httpclient/cfg/: links.txt
httpserver/: CMakeLists.txt  downloadhandler.cpp  downloadhandler.h  handlerfactory.cpp  handlerfactory.h  main.cpp  serverapp.cpp  serverapp.h
